...
        tableView.contentInset.top = 8

        registerCell(for: tableView, id: cellId)
        tableView.dataSource = self
        tableView.delegate = self
        tableView.keyboardDismissMode = .interactive
        navigationController?.title = "Currency"

        setupSearchController()

        NotificationCenter.default.addObserver(
            self,
            selector: #selector(keyboardWillShow(notification:)),
...
