...
                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="12"/>
                                <color key="textColor" name="lastUpdatedColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Currency Converter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BmQ-Js-VmB">
                                <rect key="frame" x="16" y="96" width="358" height="42"/>
                                <accessibility key="accessibilityConfiguration" identifier="currencyConverterLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="B8h-SI-Lv7"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="24"/>
                                <color key="textColor" name="viewBackgroundColor"/>
                                <nil key="highlightedColor"/>
...
